# mcp-vcd

./: README.md  pyproject.toml
.github/workflows/: ci-cd.yml  publish.yml
src/mcp_vcd/: server.py
